objects/SMAX_PS_Location_Approved_TPV__c.object
<CustomObject>
    <label>Location Approved TPV</label>
    <nameField>
        <label>Location Approved TPV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Approved TPVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Approved TPVs</relationshipLabel>
        <relationshipName>Location_Approved_TPVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Location Approved TPVs</relationshipLabel>
        <relationshipName>SMAX_PS_Location_Approved_TPVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMX_PS_Third_Party_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Approved TPVs (Third Party Vendor)</relationshipLabel>
        <relationshipName>Location_Approved_TPVs1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>